@@ -25,8 +25,8 @@
 struct dev_filter {
 	int (*passes_filter) (struct dev_filter * f, struct device * dev);
 	void (*destroy) (struct dev_filter * f);
-	unsigned use_count;
 	void *private;
+	unsigned use_count;
 };
 
 /*
