@@ -33,8 +33,6 @@
 struct dev_filter *lvm_type_filter_create(const char *proc,
 					  const struct dm_config_node *cn);
 
-void lvm_type_filter_destroy(struct dev_filter *f);
-
 int dm_major(void);
 int md_major(void);
 int blkext_major(void);
